jinfer: simplify the chat/tool APIs (dead code, unused fields, FQN cleanup)
A cleanup pass over the tool-calling surface before adding Qwen, no behavior
change:

  - Drop Part.ToolResult: never constructed. Tool results are a plain tool-role
    turn (text), which is what the encoder and toConversation already produce.
  - Shrink Tool to (name, rawJson): description and parametersJsonSchema had zero
    readers - speculative fields. name is the identity/knownTools key, rawJson is
    what the encoder embeds. buildTools and the oracle constants follow.
  - Remove the dead onToolCall channel: the detector replaced the demux's
    buffered tool-call text stream, so Generator.Listener (4->3 fields),
    Sinks (4->3), Server's toolCallSink, and the Listener/Sinks constructions
    all shed it. Streaming tool calls come from result.toolCalls(), unaffected.
  - De-FQN the chat API: java.util.Optional/ArrayList and chat.* spelled inline
    in TurnTemplate and Lfm2TurnTemplate are now imports.

Net -29 lines. Verified: Lfm2ToolOracle 6/6 and the plain Lfm2TurnTemplateOracle
still token-exact; LFM2 tool calls work streaming and non-streaming; Llama
greedy decode byte-identical to baseline; jam parity + full reactor verify green.

One known non-cleanup left deliberately: JinjaChatTemplate implements
ChatTemplate but its encode(List<Message>) is never called (the server drives
render() directly) - it is a latent-correct implementation, not dead, so left
as-is pending a decision on whether the server should use ChatTemplate
polymorphically or whole-render should drop the interface.